--- a/Font/singup.css
+++ b/Font/singup.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background: linear-gradient(175deg, #0B9BF4, #097FC8, #054770);
+background: linear-gradient(175deg, #f59432, #c4711f, #de7002);
   height: 100vh;
 }
 
