--- a/Font/login.css
+++ b/Font/login.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background: linear-gradient(175deg, #0B9BF4, #097FC8, #054770);
+  background: linear-gradient(175deg, #f59432, #c4711f, #de7002);
   height: 100vh;
 }
 
@@ -86,7 +86,7 @@ input[type="submit"] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #054770;
+  background: #3d87b5;
   border-radius: 25px;
   font-size: 18px;
   color: white;
@@ -107,7 +107,7 @@ input[type="submit"]:hover {
 }
 
 .registrarse a {
-  color: #054770;
+  color: #3d87b5;;
   text-decoration: none;
 }
 
