--- a/Font/singup.css
+++ b/Font/singup.css
@@ -83,7 +83,7 @@ input[type="submit"] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #054770;
+  background: #3d87b5;
   border-radius: 25px;
   font-size: 18px;
   color: white;
@@ -92,7 +92,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  border-color: #0B9BF4;
+  border-color:  #0B9BF4;
   transition: .5s;
 }
 
