--- a/Font/signup.css
+++ b/Font/signup.css
@@ -88,15 +88,31 @@ body {
   background-size: 16px;
 }
 
-/* etiquetas flotantes */
+/* etiquetas flotantes animadas */
 .campo label {
   position: absolute;
-  left: 12px;
+  left: 2px;
+  top: 48%;
+  transform: translateY(-50%);
   color: lightgray;
   font-size: 16px;
   pointer-events: none;
-  transition: top 0.3s ease, color 0.3s ease, font-size 0.3s ease;
   background: white;
+  transition: top 0.3s ease, font-size 0.3s ease, color 0.3s ease;
+}
+
+.campo label i {
+  margin-right: 2px;
+  margin-left: 8px;
+  margin-top: 2px;
+  color: #142049;
+}
+
+.campo input:focus~label,
+.campo input:not(:placeholder-shown)~label {
+  top: -10px;
+  font-size: 12px;
+  color: #3d87b5;
 }
 
 /* línea animada inferior */
