--- a/Font/signup.css
+++ b/Font/signup.css
@@ -109,7 +109,8 @@ body {
 }
 
 .campo input:focus~label,
-.campo input:not(:placeholder-shown)~label {
+.campo input:not(:placeholder-shown)~label,
+.campo select:focus~label{
   top: -10px;
   font-size: 12px;
   color: #3d87b5;
