--- a/Font/index.css
+++ b/Font/index.css
@@ -2,8 +2,8 @@
 
 /* === Variables de Diseño === */
 :root {
-  --color-primario: #f59432;
-  --color-primario-oscuro: #de7002;
+  --color-primario: #fdfcfb;
+  --color-primario-oscuro:#dee2e6;
   --color-acento: #2d7cff;
   --color-acento-oscuro: #0056b3;
   --color-fondo: #f4f6f9;
@@ -55,14 +55,14 @@ body.no-scroll {
 }
 
 .social-links a {
-  color: var(--color-superficie);
+  color: #de7002;
   margin-left: 1rem;
   font-size: 0.9rem;
   transition: color 0.2s;
 }
 
 .social-links a:hover {
-  color: var(--color-primario);
+  color: var(--color-texto-principal);
 }
 
 /* Encabezado Principal */
@@ -70,8 +70,8 @@ body.no-scroll {
   display: flex;
   justify-content: center; /* Centra los elementos del header */
   align-items: center;
-  padding: 1rem 2rem;
-  background: #ffffff;
+  padding: 1rem 1rem;
+  background: #de7002;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -86,7 +86,7 @@ body.no-scroll {
 }
 
 .logo img {
-  height: 40px; /* Ajusta la altura de tu logo */
+  height: 60px; /* Ajusta la altura de tu logo */
 }
 
 .logo h1 {
@@ -143,13 +143,13 @@ body.no-scroll {
 
 .login-link {
   text-decoration: none;
-  color: var(--color-texto-secundario);
+  color: #dee2e6;
   font-size: 0.9rem;
   transition: color 0.2s;
 }
 
 .login-link:hover {
-  color: var(--color-acento);
+  color: #f8f9fa;
 }
 
 .separator {
@@ -187,6 +187,7 @@ body.no-scroll {
 }
 
 /* Navegación Principal */
+
 .main-nav ul {
   display: flex;
   list-style: none;
@@ -197,7 +198,7 @@ body.no-scroll {
 
 .main-nav a {
   text-decoration: none;
-  color: var(--color-texto-secundario);
+  color: #dee2e6;
   font-size: 0.9rem;
   font-weight: 500;
   padding: 1rem 0;
@@ -399,8 +400,8 @@ body.no-scroll {
 }
 
 .buy-button {
-  background-color: var(--color-primario);
-  color: var(--color-superficie);
+  background-color: var(--color-acento);
+  color: var(--color-fondo);
   border: none;
   padding: 10px 15px;
   border-radius: var(--radio-borde);
@@ -412,7 +413,7 @@ body.no-scroll {
 }
 
 .buy-button:hover {
-  background-color: var(--color-primario-oscuro);
+  background-color: var(--color-acento-oscuro);
 }
 
 /* === Estilos para Tablets (hasta 1023px) === */
